# object_detection

./: README.md  app.py  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: utils.py
