[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py>=1.0.0",
    "accelerate>=1.10.1",
    "gradio==4.41.0",
    "moviepy>=2.2.1",
    "natsort>=8.4.0",
    "opencv-python==4.11.0.86",
    "pillow>=10.0,<11.0",
    "torch>=2.4.0",
    "transformers>=4.41.0",
]
